[gd_scene load_steps=2 format=3 uid="uid://race_hud"]

[ext_resource type="Script" path="res://scenes/hud/race_hud.gd" id="1"]

[node name="RaceHUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpeedPanel" type="PanelContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -140.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="HUD/SpeedPanel"]
layout_mode = 2

[node name="Speed" type="Label" parent="HUD/SpeedPanel"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SpeedUnit" type="Label" parent="HUD/SpeedPanel"]
layout_mode = 2
text = "KM/H"
horizontal_alignment = 2

[node name="Gear" type="Label" parent="HUD/SpeedPanel"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="RPMBar" type="ProgressBar" parent="HUD/SpeedPanel"]
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="RaceInfo" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 100.0

[node name="Position" type="Label" parent="HUD/RaceInfo"]
layout_mode = 2
text = "1ST"

[node name="Lap" type="Label" parent="HUD/RaceInfo"]
layout_mode = 2
text = "LAP 1/1"

[node name="Time" type="Label" parent="HUD/RaceInfo"]
layout_mode = 2
text = "0:00.000"

[node name="Countdown" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NitroBar" type="ProgressBar" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
max_value = 100.0
show_percentage = false

[node name="Message" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
text = ""
horizontal_alignment = 1
